--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -154,8 +154,8 @@
             </div>
 
             <div id="popupBackdrop" class="popupBackdrop"></div>
-            <div id="popupReview" class="popupReview">
-                <div class="popup-contentReview">
+            <div id="popup" class="popup">
+                <div class="popupContentReview">
                     <h1 style="font-weight: bold;" id="reviewTitle">Create a New Collection</h1>
                     <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                     <form>  
@@ -170,7 +170,7 @@
                         <button type="submit" class="main-button-brown-small mb-4" id="submitReview">Create Collection</button>
                     </form>
                 </div>
-                <span class="closeReview">&times;</span>
+                <span class="close">&times;</span>
             </div>
         </section>
 
