--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -93,7 +93,7 @@
                     </div>
                     <button id="followBtn" class="main-button-brown-xsmall mt-3" style="display:none;">Follow</button>
                     <button id="editProfileBtn" class="main-button-brown-small mt-3">Edit Profile</button>
-                    <button id="makeCollection" class="main-button-brown-small mt-3 openReviewPopup">Make Collection</button>
+                    <button id="makeCollection" class="main-button-brown-small mt-3 makeCollectionPopup">Make Collection</button>
                 </div>
             </div>
 
@@ -153,9 +153,10 @@
                 </span>
             </div>
 
+            <!-- Create Collection Popup -->
             <div id="popupBackdrop" class="popupBackdrop"></div>
             <div id="popup" class="popup">
-                <div class="popupContentReview">
+                <div class="popupContentCollection">
                     <h1 style="font-weight: bold;" id="reviewTitle">Create a New Collection</h1>
                     <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                     <form>  
