changed settings page, updated home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,6 +115,7 @@
                     <div class="d-flex flex-column align-items-center text-center">
                         <a href="loginPages/createAccount.html"> <button class="main-button-brown"> Create an Account </button> </a>
                         <a href="subpages/browse.html"> <button class="main-button-brown"> Start Exploring Our Library </button> </a>
+                        <a href="subpages/collections.html"> <button class="main-button-brown"> Check Out Collections by Other Users </button> </a>
                     </div>
 
                 </div>
