--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="settingsValues">
-                        <h1 id="account"> Account Settings </h1>
+                        <h1 id="account" class="mb-2"> Account Settings </h1>
                         <hr style="background-color: var(--darkBrown);">
                         <form >
                         <form>
@@ -117,17 +117,26 @@
                             </fieldset>
                         </form>
 
-                        <h1 class="mt-5" id="accessiblity"> Accessiblity </h1>
+                        <h1 class="mt-5 mb-2" id="accessiblity"> Accessiblity </h1>
                         <hr style="background-color: var(--darkBrown);">
                         <form>
                             <fieldset>
-                                <label> Enable Dark Mode </label>
+                                <label> Enable Dark Mode </label> <br>
+                                Changes the core column scheme of the website to darker tones. <br>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Enable </button>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Disable </button>
                             </fieldset>
                             <fieldset>
-                                <label> Enable Color Blind Mode </label>
+                                <label> Enable Color Blind Mode </label> <br>
+                                Changes the core column scheme of the website to better contrast important elements (buttons, links, etc). <br>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Enable </button>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Disable </button>
                             </fieldset>
                             <fieldset>
-                                <label> Enable Dyslexia-Friendly Fonts </label>
+                                <label> Enable Dyslexia-Friendly Fonts </label> <br>
+                                Changes all fonts on the website to Ariel, one of the most common dyslexia-friendly fonts. <br>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Enable </button>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview"> Disable </button>
                             </fieldset>
                         </form>
                     </div>
