--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -234,132 +234,8 @@
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
 
-        <script>
-            document.addEventListener("DOMContentLoaded", async () => {
-                const urlParams = new URLSearchParams(window.location.search);
-                const query = urlParams.get("search");
-                const pageCurrent = Number(urlParams.get("page"));
-                const searchInput = document.getElementById("searchInput");
-                const resultsDiv = document.getElementById("results");
-                let pageTotal = 0;
-
-                if (searchInput && query) {
-                    searchInput.value = query;
-                }
-
-                if (!query || !resultsDiv) return;
-
-                try {
-                    const response = await fetch(`/book_router/search?q=${encodeURIComponent(query)}&limit=50&page=1`);
-                    if (!response.ok) throw new Error("Network response not ok");
-
-                    const data = await response.json();
-
-                    const resultsCol = document.createElement("div");
-                    resultsCol.classList.add("resultsCol");
-
-                    if (data.results && data.results.length > 0) {
-
-                        const bookPerPage = 5;
-                        pageTotal = Math.ceil(data.results.length / bookPerPage);
-                        let pager = document.getElementById("pager");
-                        pager.innerHTML = `${pageCurrent} / ${pageTotal}`;
-
-                        let i = 0;
-                        data.results.forEach(book => {
-                            i += 1;
-                            if (i > ((pageCurrent-1) * bookPerPage) && i <= (pageCurrent * bookPerPage)) {
-                                const bookDiv = document.createElement("div");
-                                bookDiv.classList.add("lit");
-
-                                bookDiv.innerHTML = `
-                                    <div class="coverImgContainer">
-                                        <img src="${book.cover || "../images/bookCoverDefault.svg"}" class="coverImage">
-                                    </div>
-                                    <div class="litTitle">${book.title || 'No Title'}</div>
-                                    <div class="litAuthor">
-                                        By ${book.authors ? book.authors.join(", ") : 'Unknown'} 
-                                        <br> <em> ${book.first_publish_year || 'N/A'} </em> 
-                                    </div>
-                                    <div class="litRating">
-                                        &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#" class="viewReviewsPopup">View Reviews (10)</a>
-                                    </div>
-                                    <div class="iconsContainer">
-                                        <button class="unstyled-button openCollectionPopup">
-                                            <img class="icon" src="../images/addToCollection.svg" title="Add to Collection">
-                                        </button>
-                                        <button type="button" class="unstyled-button openReviewPopup">
-                                            <img class="icon" src="../images/review.svg" title="Leave a Review">
-                                        </button>
-                                    </div>
-                                `;
-                                resultsCol.appendChild(bookDiv);
-                            }
-                        });
-                    } else {
-                        resultsCol.innerHTML = "<p>No results found.</p>";
-                    }
-
-                    resultsDiv.appendChild(resultsCol);
-                } catch (error) {
-                    console.error("Search failed:", error);
-                    resultsDiv.innerHTML = "<p>An error occurred while searching.</p>";
-                }
-
-                // add event listeners to results
-                document.addEventListener("click", e => {
-                    // grab elements
-                    const popup = document.getElementById("popup");
-                    const popupBackdrop = document.getElementById("popupBackdrop"); 
-                    const popupContentReview = popup.querySelector(".popupContentReview"); 
-                    const popupContentCollection = popup.querySelector(".popupContentCollection"); 
-                    const popupContentViewReviews = popup.querySelector(".popupContentViewReviews");
-
-                    if (e.target.closest(".openReviewPopup") || e.target.closest(".openCollectionPopup") || e.target.closest(".viewReviewsPopup")) {
-                        // dynamic titles
-                        const litDiv = e.target.closest(".lit");
-                        const titleText = litDiv.querySelector(".litTitle").textContent.trim();
-                        const reviewTitle = document.getElementById("reviewTitle");
-                        const collectionTitle = document.getElementById("collectionTitle");
-                        const litTitle = document.getElementById("litTitle");
-
-                        // make needed elements visable
-                        popup.style.display = "grid";
-                        popupBackdrop.style.display = "block";
-                        if (e.target.closest(".openReviewPopup")) { popupContentReview.style.display = "flex"; reviewTitle.innerHTML = `Review "${titleText}"`; }
-                        if (e.target.closest(".openCollectionPopup")) { popupContentCollection.style.display = "flex"; collectionTitle.innerHTML = `Add "${titleText}" to Collections`; }
-                        if (e.target.closest(".viewReviewsPopup")) { popupContentViewReviews.style.display = "flex"; litTitle.innerHTML = `Reviews for "${titleText}"`; }
-                    }
-                    if (e.target.closest(".close")) { // make popups invisible
-                        popup.style.display = "none";
-                        popupBackdrop.style.display = "none";
-                        popupContentReview.style.display = "none"; popupContentCollection.style.display = "none"; popupContentViewReviews.style.display = "none";
-                    }
-                });
-
-                const back = document.getElementById("backPage");
-                back.addEventListener("click", (event) => {
-                    if (pageCurrent >= 2) {
-                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent - 1}`;
-                    }
-                    else {
-                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent}`;
-                    }
-
-                });
-
-                const next = document.getElementById("nextPage");
-                next.addEventListener("click", (event) => {
-                    if (pageCurrent < pageTotal) {
-                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent + 1}`;
-                    }
-                    else {
-                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent}`;
-                    }
-
-                });
-            });
-        </script>
+        <!-- Script for browse-->
+        <script type="module" src="../js/browse.js"></script>
 
     </body>
 
